# fastapi-clean-architecture

./: .env.example  README.md  Taskfile.yml  aqua.yaml  compose.yaml  pyproject.toml
hack/: run.default.sh
migration/: schema.sql
src/: __init__.py  main.py
src/app/: config.py  database.py  registry.py
src/application/: __init__.py
src/application/use_cases/: __init__.py  create_todo.py  get_todo_by_id.py  todo_use_cases.py
src/controller/: __init__.py
src/controller/router/: root.py  todo.py
src/controller/schema/: todo.py
src/domain/: __init__.py
src/domain/entities/: todo.py
src/domain/repositories/: todo_repository.py
src/domain/todo/: aggregate.py  repository.py
src/dto/: todo.py
src/infra/: __init__.py  entity.py
src/infra/database/: connection.py  entites.py  models.py  repository_base.py
src/infra/repositories/: todo.py  todo_repository.py  todo_repository_impl.py
src/infrastructure/database/: connection.py  models.py  repository_base.py
src/infrastructure/repositories/: todo_repository.py  todo_repository_impl.py
src/presentation/api/: dependencies.py  router.py  schemas.py
src/presentation/dto/: todo.py
src/presentation/router/: root.py  todo.py
src/presentation/schema/: todo.py
src/registry/: registry.py  repository.py
src/uc/: __init__.py  create_todo.py
src/usecase/: __init__.py  create_todo.py  get_todo_by_id.py
